--- a/Belly_Button_Biodiversity/index.html
+++ b/Belly_Button_Biodiversity/index.html
@@ -13,10 +13,34 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-12 jumbotron text-center" style="background-color: blue; color: white;">
+      <div class="col-12">
+        <div class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="bacteria-cells2.jpg" class="d-block w-100 img-thumbnail" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>First slide label</h5>
+                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+              </div>
+            </div>
+
+        </div>
+      </div>
+      
+      
+
+
+
+
+
+      <!-- <div class="col-md-12 jumbotron text-center" style="background-color: blue; color: white;">
         <h1>Belly Button Biodiversity Dashboard</h1>
         <p>Use the interactive charts below to explore the dataset</p>
-      </div>
+      </div> -->
     </div>
     <div class="row">
       <div class="col-md-2">
