have working gauge

--- a/Belly_Button_Biodiversity/index.html
+++ b/Belly_Button_Biodiversity/index.html
@@ -10,37 +10,15 @@
 </head>
 
 <body>
+<div class="box" style="background-color: cadetblue;">
 
   <div class="container">
     <div class="row">
-      <div class="col-12">
-        <div class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="bacteria-cells2.jpg" class="d-block w-100 img-thumbnail" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-              </div>
-            </div>
-
-        </div>
-      </div>
-      
-      
-
-
-
-
-
-      <!-- <div class="col-md-12 jumbotron text-center" style="background-color: blue; color: white;">
+      <div class="col-md-12 jumbotron text-center border border-light" style="background-color: rgb(94, 89, 89); color: white">
         <h1>Belly Button Biodiversity Dashboard</h1>
-        <p>Use the interactive charts below to explore the dataset</p>
-      </div> -->
+        <hr>
+        <h2>Use the interactive charts below to explore the dataset</h2>
+      </div>
     </div>
     <div class="row">
       <div class="col-md-2">
@@ -73,7 +51,7 @@
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="./static/js/app.js"></script>
   <!-- <script src="./static/js/bonus.js"></script> -->
-
+</div>
 </body>
 
 </html>
