--- a/Belly_Button_Biodiversity/index.html
+++ b/Belly_Button_Biodiversity/index.html
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-<div class="box" style="background-color: cadetblue;">
+<div class="box">
 
   <div class="container">
-    <div class="row">
-      <div class="col-md-12 jumbotron text-center border border-light" style="background-color: rgb(94, 89, 89); color: white">
+    <div class="row" id="test">
+      <div class="col-md-12 jumbotron text-center" style="background-color: rgb(131, 121, 121); color: white">
         <h1>Belly Button Biodiversity Dashboard</h1>
         <hr>
         <h2>Use the interactive charts below to explore the dataset</h2>
@@ -22,12 +22,12 @@
     </div>
     <div class="row">
       <div class="col-md-2">
-        <div class="well">
-          <h5>Test Subject ID No.:</h5>
+        <div class="well" style="background-color:rgb(133, 121, 121);">
+          <h5 style="color:white;">Test Subject ID No.:</h5>
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
         <div class="panel panel-primary">
-          <div class="panel-heading">
+          <div class="panel-heading" style="background-color: #ef83f3; color: black;">
             <h3 class="panel-title">Demographic Info</h3>
           </div>
           <div id="sample-metadata" class="panel-body"></div>
@@ -40,7 +40,8 @@
         <div id="gauge"></div>
       </div>
     </div>
-    <div class="row">
+    <hr>
+    <div class="row" style="padding-top: 30px;">
       <div class="col-md-12">
         <div id="bubble"></div>
       </div>
